tests/pos/i6151/Outcome.java
public @interface Outcome { Expect enm(); }