tests/neg/java-ann-extends-separate/Ann_1.java
public @interface Ann_1 {
  int value();
}
